@@ -19,57 +19,53 @@
 package org.drools.mvel.integrationtests.concurrency;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.CyclicBarrier;
+import java.util.stream.Stream;
 
 import org.drools.mvel.integrationtests.facts.BeanA;
 import org.drools.testcoverage.common.util.KieBaseTestConfiguration;
-import org.drools.testcoverage.common.util.TestParametersUtil;
-import org.junit.Test;
+import org.drools.testcoverage.common.util.TestParametersUtil2;
 import org.junit.experimental.categories.Category;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.Timeout;
+import org.junit.jupiter.api.condition.EnabledIfSystemProperty;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.kie.api.runtime.KieSession;
-import org.kie.test.testcategory.TurtleTestCategory;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
 
-@RunWith(Parameterized.class)
-@Category(TurtleTestCategory.class)
+@EnabledIfSystemProperty(named = "runTurtleTests", matches = "true")
 public class SharedSessionParallelTest extends AbstractConcurrentTest {
 
-    @Parameterized.Parameters(name = "Enforced jitting={0}, KieBase type={1}")
-    public static List<Object[]> getTestParameters() {
-        List<Boolean[]> baseParams = Arrays.asList(
-                new Boolean[] {false},
-                new Boolean[] {true}
-                );
+    public static Stream<Arguments> parameters() {
+        List<Boolean> baseParams = List.of(false, true);
 
-        Collection<Object[]> kbParams = TestParametersUtil.getKieBaseCloudConfigurations(true);
+        Collection<KieBaseTestConfiguration> kbParams = TestParametersUtil2.getKieBaseCloudConfigurations(true);
         // combine
-        List<Object[]> params = new ArrayList<>();
-        for (Boolean[] baseParam : baseParams) {
-            for (Object[] kbParam : kbParams) {
-                if (baseParam[0] == true && ((KieBaseTestConfiguration) kbParam[0]).isExecutableModel()) {
+        List<Arguments> params = new ArrayList<>();
+        for (Boolean baseParam : baseParams) {
+            for (KieBaseTestConfiguration kbParam : kbParams) {
+                if (baseParam && kbParam.isExecutableModel()) {
                     // jitting & exec-model test is not required
                 } else {
-                    params.add(new Object[] {baseParam[0], kbParam[0]});
+                    params.add(arguments(baseParam, kbParam));
                 }
             }
         }
-        return params;
+        return params.stream();
     }
 
-    public SharedSessionParallelTest(final boolean enforcedJitting, final KieBaseTestConfiguration kieBaseTestConfiguration) {
-        super(enforcedJitting, false, false, false, kieBaseTestConfiguration);
-    }
-
-    @Test(timeout = 120000)
-    public void testNoExceptions() throws InterruptedException {
+    @ParameterizedTest(name = "Enforced jitting={0}, KieBase type={1}")
+    @MethodSource("parameters")
+    @Timeout(120000)
+    public void testNoExceptions(boolean enforcedJitting, KieBaseTestConfiguration kieBaseTestConfiguration) throws InterruptedException {
+        initTest(enforcedJitting, false, false, false, kieBaseTestConfiguration);
         final String drl = "rule R1 when String() then end";
 
         final int repetitions = 100;
@@ -96,8 +92,11 @@ public class SharedSessionParallelTest extends AbstractConcurrentTest {
         }
     }
 
-    @Test(timeout = 40000)
-    public void testCheckOneThreadOnly() throws InterruptedException {
+    @ParameterizedTest(name = "Enforced jitting={0}, KieBase type={1}")
+    @MethodSource("parameters")
+    @Timeout(40000)
+    public void testCheckOneThreadOnly(boolean enforcedJitting, KieBaseTestConfiguration kieBaseTestConfiguration) throws InterruptedException {
+        initTest(enforcedJitting, false, false, false, kieBaseTestConfiguration);
         final int threadCount = 100;
         final List<String> list = Collections.synchronizedList(new ArrayList<>());
 
@@ -139,8 +138,11 @@ public class SharedSessionParallelTest extends AbstractConcurrentTest {
         }
     }
 
-    @Test(timeout = 40000)
-    public void testCorrectFirings() throws InterruptedException {
+    @ParameterizedTest(name = "Enforced jitting={0}, KieBase type={1}")
+    @MethodSource("parameters")
+    @Timeout(40000)
+    public void testCorrectFirings(boolean enforcedJitting, KieBaseTestConfiguration kieBaseTestConfiguration) throws InterruptedException {
+        initTest(enforcedJitting, false, false, false, kieBaseTestConfiguration);
         final int threadCount = 100;
 
         final String drl = "import " + BeanA.class.getCanonicalName() + ";\n" +
@@ -168,8 +170,11 @@ public class SharedSessionParallelTest extends AbstractConcurrentTest {
         checkList(threadCount, list);
     }
 
-    @Test(timeout = 40000)
-    public void testCorrectFirings2() throws InterruptedException {
+    @ParameterizedTest(name = "Enforced jitting={0}, KieBase type={1}")
+    @MethodSource("parameters")
+    @Timeout(40000)
+    public void testCorrectFirings2(boolean enforcedJitting, KieBaseTestConfiguration kieBaseTestConfiguration) throws InterruptedException {
+        initTest(enforcedJitting, false, false, false, kieBaseTestConfiguration);
         final int threadCount = 100;
 
         final String drl = "import " + BeanA.class.getCanonicalName() + ";\n" +
@@ -199,8 +204,11 @@ public class SharedSessionParallelTest extends AbstractConcurrentTest {
         assertThat(list).hasSize(expectedListSize);
     }
 
-    @Test(timeout = 40000)
-    public void testLongRunningRule() throws InterruptedException {
+    @ParameterizedTest(name = "Enforced jitting={0}, KieBase type={1}")
+    @MethodSource("parameters")
+    @Timeout(40000)
+    public void testLongRunningRule(boolean enforcedJitting, KieBaseTestConfiguration kieBaseTestConfiguration) throws InterruptedException {
+        initTest(enforcedJitting, false, false, false, kieBaseTestConfiguration);
         final int threadCount = 100;
         final int seed = threadCount + 200;
         final int objectCount = 1000;
@@ -257,8 +265,11 @@ public class SharedSessionParallelTest extends AbstractConcurrentTest {
         checkList(1, threadCount, list2, (threadCount - 1) * objectCount);
     }
 
-    @Test(timeout = 40000)
-    public void testLongRunningRule2() throws InterruptedException {
+    @ParameterizedTest(name = "Enforced jitting={0}, KieBase type={1}")
+    @MethodSource("parameters")
+    @Timeout(40000)
+    public void testLongRunningRule2(boolean enforcedJitting, KieBaseTestConfiguration kieBaseTestConfiguration) throws InterruptedException {
+        initTest(enforcedJitting, false, false, false, kieBaseTestConfiguration);
         final int threadCount = 100;
         final int seed = 1000;
 
@@ -308,8 +319,11 @@ public class SharedSessionParallelTest extends AbstractConcurrentTest {
         checkList(0, seed, list, seed * threadCount);
     }
 
-    @Test(timeout = 40000)
-    public void testLongRunningRule3() throws InterruptedException {
+    @ParameterizedTest(name = "Enforced jitting={0}, KieBase type={1}")
+    @MethodSource("parameters")
+    @Timeout(40000)
+    public void testLongRunningRule3(boolean enforcedJitting, KieBaseTestConfiguration kieBaseTestConfiguration) throws InterruptedException {
+        initTest(enforcedJitting, false, false, false, kieBaseTestConfiguration);
         final int threadCount = 10;
         final int seed = threadCount + 50;
         final int objectCount = 1000;
@@ -374,8 +388,11 @@ public class SharedSessionParallelTest extends AbstractConcurrentTest {
         assertThat(list2).hasSize(list2ExpectedSize);
     }
 
-    @Test(timeout = 40000)
-    public void testCountdownBean() throws InterruptedException {
+    @ParameterizedTest(name = "Enforced jitting={0}, KieBase type={1}")
+    @MethodSource("parameters")
+    @Timeout(40000)
+    public void testCountdownBean(boolean enforcedJitting, KieBaseTestConfiguration kieBaseTestConfiguration) throws InterruptedException {
+        initTest(enforcedJitting, false, false, false, kieBaseTestConfiguration);
         final int threadCount = 100;
         final int seed = 1000;
 
@@ -414,8 +431,11 @@ public class SharedSessionParallelTest extends AbstractConcurrentTest {
         assertThat(bean).hasFieldOrPropertyWithValue("seed", 0);
     }
 
-    @Test(timeout = 40000)
-    public void testCountdownBean2() throws InterruptedException {
+    @ParameterizedTest(name = "Enforced jitting={0}, KieBase type={1}")
+    @MethodSource("parameters")
+    @Timeout(40000)
+    public void testCountdownBean2(boolean enforcedJitting, KieBaseTestConfiguration kieBaseTestConfiguration) throws InterruptedException {
+        initTest(enforcedJitting, false, false, false, kieBaseTestConfiguration);
         final int threadCount = 100;
         final int seed = 1000;
 
@@ -455,8 +475,11 @@ public class SharedSessionParallelTest extends AbstractConcurrentTest {
         }
     }
 
-    @Test(timeout = 60000)
-    public void testOneRulePerThread() throws InterruptedException {
+    @ParameterizedTest(name = "Enforced jitting={0}, KieBase type={1}")
+    @MethodSource("parameters")
+    @Timeout(60000)
+    public void testOneRulePerThread(boolean enforcedJitting, KieBaseTestConfiguration kieBaseTestConfiguration) throws InterruptedException {
+        initTest(enforcedJitting, false, false, false, kieBaseTestConfiguration);
         final int threadCount = 1000;
 
         final String[] drls = new String[threadCount];
